2007-01-29  Ulrich Mueller  <ulm@kph.uni-mainz.de>

	* emacsclient.c, server.c: Check for HAVE_SOCKETS instead of BSD.

	* cvtmail.c, emacsclient.c, env.c, etags.c, fakemail.c,
	make-docfile.c, movemail.c, server.c, sorted-doc.c,
	test-distrib.c, wakeup.c, yow.c: Fix GCC 4.1 compilation issues.

1998-05-30  Noah Friedman  <friedman@splode.com>

	* env.c (main): Declare sys_errlist if linux + glibc2.
	Patch from Steve Baur <steve@xemacs.org>.

Wed Oct 21 18:21:39 1992  Richard Stallman  (rms@mole.gnu.ai.mit.edu)

	* Makefile: Emacstool and other Sun-only targets replaced.
	* emacstool.c: New file.

Sat Aug 22 03:09:48 1992  Richard Stallman  (rms@mole.gnu.ai.mit.edu)

	* emacsclient.c (main): Set IPC_CREAT in msgget call.

Thu Aug 20 01:09:32 1992  Richard Stallman  (rms@mole.gnu.ai.mit.edu)

	* etags.c (TEX_funcs): Keep just 1 of two redundant nested loops.
	(TEX_decode_env): Make `tab' one element longer.

Sat May  9 16:24:08 1992  Richard Stallman  (rms@mole.gnu.ai.mit.edu)

	* etags.c (getit): Allow _ and $ in fortran symbol.

Thu May  7 16:11:26 1992  Richard Stallman  (rms@mole.gnu.ai.mit.edu)

	* movemail.c [POP]: Get user name via getpwuid.

Sat Mar 28 15:59:12 1992  Richard Stallman  (rms@mole.gnu.ai.mit.edu)

	* movemail.c: Allocate tempname dynamically.

Sun Mar 22 23:21:21 1992  Richard Stallman  (rms@mole.gnu.ai.mit.edu)

	* server.c: Include sys/types.h before signal.h.

Thu Mar 12 16:45:36 1992  Richard Stallman  (rms@mole.gnu.ai.mit.edu)

	* termcap.dat: Added vt101*, vt102*, vt131* and vt300.

Sat Jan 25 16:20:41 1992  Richard Stallman  (rms@mole.gnu.ai.mit.edu)

	* env.c: Include errno.h.

Sun Jan 19 11:29:00 1992    (Eric Youngdale at youngdale@v6550c.nrl.navy.mil)

	* etags-vmslib.c (fn_exp): Add type cast.

Tue Dec 31 16:16:05 1991  Richard Stallman  (rms at mole.gnu.ai.mit.edu)

	* server.c: Include sys/signal.h before config.h.

Sat Dec  7 17:04:17 1991  Richard Stallman  (rms at mole.gnu.ai.mit.edu)

	* movemail.c: Copied from Emacs 19.